dc/s2n-quic-dc/src/snapshots/s2n_quic_dc__testing__run_sim_with_snapshot@endpoint__tasks__tests__context_resolver__same_peer_reuses_context.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 TRACE c#send.pending.enq=1
0:00:00.000000000 TRACE g#send.pending.depth=1
0:00:00.000000000 TRACE m#send.pending.depth_dist=1
0:00:00.000000000 TRACE c#send.pending.enq=1
0:00:00.000000000 TRACE g#send.pending.depth=2
0:00:00.000000000 TRACE m#send.pending.depth_dist=2
